# libxmp

./: pyproject.toml
libxmp/: version.py
