[tool.poetry]
name = "python-xmp-toolkit"
version = "2.1.0"
description = "Python XMP Toolkit for working with metadata."
authors = ["Lars Holm Nielsen <lars@hankat.dk>", "John Evans", "Federico Caboni", "Amit Kapadia"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/python-xmp-toolkit/python-xmp-toolkit"
repository = "https://github.com/python-xmp-toolkit/python-xmp-toolkit"
documentation = "https://python-xmp-toolkit.readthedocs.io/"
keywords = ["xmp", "metadata", "exif", "exempi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
packages = [{include = "libxmp"}]

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
pytz = "*"

[tool.poetry.group.dev.dependencies]
mock = {version = ">=1.0.1", python = "<3.3"}
unittest2 = {version = ">=0.5.1", python = "<2.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/python-xmp-toolkit/python-xmp-toolkit/issues"
"Download" = "https://pypi.python.org/pypi/python-xmp-toolkit"